--- a/ELTA_project_combined.ipynb
+++ b/ELTA_project_combined.ipynb
@@ -65,17 +65,17 @@
       "metadata": {
         "id": "jtDlv4AAES_d",
         "colab_type": "code",
+        "outputId": "d90a16c4-57bd-41a9-bd61-02d44cf995d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
-        },
-        "outputId": "d90a16c4-57bd-41a9-bd61-02d44cf995d4"
+        }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,16 +171,16 @@
       "metadata": {
         "id": "wOd-_Z4hEJjQ",
         "colab_type": "code",
+        "outputId": "933dfae4-4cee-4a17-9b1a-08a16d5582f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "933dfae4-4cee-4a17-9b1a-08a16d5582f4"
+        }
       },
       "source": [
         "normalize_accent('journal arts n° 133 28/09/2001 art marche salo...')"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +211,7 @@
       "source": [
         "!python -m spacy download fr\n"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,17 +276,17 @@
       "metadata": {
         "id": "zrkF5tnmEJjY",
         "colab_type": "code",
+        "outputId": "24639cfb-3758-468a-b0e8-6041a49c3a85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
-        },
-        "outputId": "24639cfb-3758-468a-b0e8-6041a49c3a85"
+        }
       },
       "source": [
         "x_df['tokens'] = x_df['designation'].apply(lambda s : raw_to_tokens(s,spacy_nlp))\n",
         "x_df.to_csv('./tokens.csv')"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -317,17 +317,17 @@
       "metadata": {
         "id": "nzDq2frzEJje",
         "colab_type": "code",
+        "outputId": "290db96c-39f3-4ed9-bc66-b585e3d23a85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "290db96c-39f3-4ed9-bc66-b585e3d23a85"
+        }
       },
       "source": [
         "x_df = pd.read_csv('/content/drive/My Drive/ELTA/tokens.csv')\n",
         "x_df.tail()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -414,16 +414,16 @@
       "metadata": {
         "id": "bDMRXL3xEJjg",
         "colab_type": "code",
+        "outputId": "678ffa81-8de1-46b9-a299-c233224e3ebe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 493
-        },
-        "outputId": "678ffa81-8de1-46b9-a299-c233224e3ebe"
+        }
       },
       "source": [
         "y_df.prdtypecode.value_counts()"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,18 +471,18 @@
       "metadata": {
         "id": "N2A8UKFoEJjk",
         "colab_type": "code",
+        "outputId": "6c732d1f-5c93-4f37-a2ff-8bec1b0729f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6c732d1f-5c93-4f37-a2ff-8bec1b0729f8"
+        }
       },
       "source": [
         "# drop na\n",
         "x_df, y_df = x_df[ ~ x_df.tokens.isna()], y_df[~ x_df.tokens.isna()]\n",
         "print(x_df.shape, y_df.shape)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,17 +564,17 @@
       "metadata": {
         "id": "ZoqKO6SMEJju",
         "colab_type": "code",
+        "outputId": "880af154-e33f-42d1-8690-649ff304c342",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "880af154-e33f-42d1-8690-649ff304c342"
+        }
       },
       "source": [
         "clf = tree.DecisionTreeClassifier()\n",
         "clf.fit(X_train, y_train)"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -625,7 +625,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "collapsed": true,
         "id": "HHD_-_FvEJjz",
         "colab_type": "code",
         "colab": {}
@@ -697,8 +696,8 @@
       "metadata": {
         "id": "NGKDsLTeEJj5",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "18a098f4-543c-4d64-84c9-fc900319715c"
+        "outputId": "18a098f4-543c-4d64-84c9-fc900319715c",
+        "colab": {}
       },
       "source": [
         "weighted_f1_scores"
@@ -783,8 +782,8 @@
       "metadata": {
         "id": "ygHClUBnEJkA",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "1b1b8fd1-26d7-47a2-e21f-cc06fed8dcd5"
+        "outputId": "1b1b8fd1-26d7-47a2-e21f-cc06fed8dcd5",
+        "colab": {}
       },
       "source": [
         "n_estimators = [50,100]\n",
@@ -832,8 +831,8 @@
         "scrolled": true,
         "id": "PsNjN6soEJkC",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "b9b19403-e373-4ba2-d2e2-3c3b7872951a"
+        "outputId": "b9b19403-e373-4ba2-d2e2-3c3b7872951a",
+        "colab": {}
       },
       "source": [
         "res = model.fit(X_train, y_train)"
@@ -878,8 +877,8 @@
         "scrolled": true,
         "id": "8q3xW8CXEJkD",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "4efcebd9-7d8a-460a-d013-91fed77cc6c8"
+        "outputId": "4efcebd9-7d8a-460a-d013-91fed77cc6c8",
+        "colab": {}
       },
       "source": [
         "y_pred = model.predict(X_test)\n",
